--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
-    "@reduxjs/toolkit": "^1.8.3",
+    "@iconify/react": "^3.2.2",
     "@mui/material": "^5.10.0",
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
