--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
+    "@size-limit/preset-app": "^8.0.1",
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.10",
     "@storybook/addon-interactions": "^6.5.10",
@@ -71,13 +72,13 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.10",
     "@storybook/testing-library": "0.0.13",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "babel-plugin-named-exports-order": "0.0.2",
     "eslint": "^8.21.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -92,6 +93,7 @@
     "prettier": "^2.7.1",
     "prop-types": "^15.8.1",
     "react-test-renderer": "^18.2.0",
+    "size-limit": "^8.0.1",
     "webpack": "^5.74.0"
   }
 }
