--- a/package.json
+++ b/package.json
@@ -9,10 +9,6 @@
     "@mui/material": "^5.10.0",
     "@mui/system": "^5.10.0",
     "@reduxjs/toolkit": "^1.8.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
@@ -64,6 +60,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@size-limit/preset-app": "^8.0.1",
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.10",
     "@storybook/addon-interactions": "^6.5.10",
@@ -74,6 +72,11 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.10",
     "@storybook/testing-library": "0.0.13",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "babel-plugin-named-exports-order": "0.0.2",
@@ -86,8 +89,11 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.4",
+    "jest": "^28.1.3",
     "prettier": "^2.7.1",
     "prop-types": "^15.8.1",
+    "react-test-renderer": "^18.2.0",
+    "size-limit": "^8.0.1",
     "webpack": "^5.74.0"
   }
 }
