--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "eject": "react-scripts eject",
     "lint": "eslint --ext .tsx .",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "chromatic": "npx chromatic --exit-zero-on-changes"
   },
   "eslintConfig": {
     "extends": [
@@ -79,6 +80,7 @@
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "babel-plugin-named-exports-order": "0.0.2",
+    "chromatic": "^6.7.4",
     "eslint": "^8.21.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
@@ -93,5 +95,7 @@
     "prop-types": "^15.8.1",
     "react-test-renderer": "^18.2.0",
     "webpack": "^5.74.0"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "lm-v360-main@0.1.0"
 }
