--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
+  "overrides": {
+    "react-refresh": "0.14.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "dev": "react-scripts start",
