--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "ag-grid-community": "^28.1.0",
+    "ag-grid-enterprise": "^28.1.0",
     "ag-grid-react": "^28.1.0",
     "apexcharts": "^3.35.4",
     "axios": "^0.27.2",
