--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
 REACT_APP_API = "http://localhost:5000"
+
+REACT_APP_OKTA_CLIENT_ID="000000000000000"
+REACT_APP_OKTA_ISSUER="https://v360.okta.com/oauth2/default"
+REACT_APP_OKTA_BASE_URL="http://localhost:3000/login/callback"
+REACT_APP_OKTA_LOGOUT_URL="http://localhost:3000"
