--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.10.0",
     "@mui/system": "^5.10.0",
     "@reduxjs/toolkit": "^1.8.3",
+    "@types/lodash": "^4.14.184",
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
@@ -18,6 +19,7 @@
     "ag-grid-react": "^28.1.0",
     "apexcharts": "^3.35.4",
     "axios": "^0.27.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
