--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.0",
     "@mui/system": "^5.10.0",
+    "@okta/okta-auth-js": "^6.7.6",
+    "@okta/okta-react": "^6.6.0",
     "@reduxjs/toolkit": "^1.8.3",
     "@types/lodash": "^4.14.184",
     "@types/node": "^16.11.47",
