--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "ag-grid-react": "^28.1.0",
     "apexcharts": "^3.35.4",
     "axios": "^0.27.2",
+    "i18next": "^21.9.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.4",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
