--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "ag-grid-react": "^28.1.0",
     "apexcharts": "^3.35.4",
     "axios": "^0.27.2",
+    "i": "^0.3.7",
     "i18next": "^21.9.1",
+    "i18next-browser-languagedetector": "^6.1.5",
+    "i18next-http-backend": "^1.4.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "npm": "^8.18.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
