--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "npm": "^8.18.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
@@ -121,5 +120,9 @@
     "webpack": "^5.74.0"
   },
   "readme": "ERROR: No README data found!",
-  "_id": "lm-v360-main@0.1.0"
+  "_id": "lm-v360-main@0.1.0",
+  "engines": {
+    "node": "14.18.1",
+    "npm": "8.18.0"
+  }
 }
