--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ag-grid-enterprise": "^28.1.0",
     "ag-grid-react": "^28.1.0",
     "apexcharts": "^3.35.4",
+    "autosuggest-highlight": "^3.3.4",
     "axios": "^0.27.2",
     "i": "^0.3.7",
     "i18next": "^21.9.1",
@@ -96,6 +97,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/autosuggest-highlight": "^3.2.0",
     "@types/jest": "^27.5.2",
     "@types/js-cookie": "^3.0.2",
     "@types/react-test-renderer": "^18.0.0",
